--- a/index.html
+++ b/index.html
@@ -1,182 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sota Noniwa</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./style.css" />
-  </head>
-  <body>
-    <section id="top-banner">
-      <div class="container">
-        <div class="bg"></div>
-        <div class="bg bg2"></div>
-        <div class="bg bg3"></div>
-        <div class="content">
-          <h1>Portfolio</h1>
-          <p>Sota Noniwa</p>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sota Noniwa</title>
+  <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+        crossorigin="anonymous" />
+  <link rel="stylesheet" href="./style.css" />
+</head>
+
+<body>
+  <section id="top-banner">
+    <div class="container">
+      <div class="bg"></div>
+      <div class="bg bg2"></div>
+      <div class="bg bg3"></div>
+      <div class="content">
+        <h1>Portfolio</h1>
+        <p>Sota Noniwa</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="about-me" class="my-5">
+    <div class="p-5 text-start bg-body-tertiary">
+      <div class="grid-container">
+        <div class="container">
+          <h1 class="text-body-emphasis">About me</h1>
+          <p class="lead">
+            I am a Computer Science BSc student with primary interest in web &
+            mobile application development. I am expected to complete my
+            Bachelor's degree from University of Debrecen in August 2024. This
+            website is my first portfolio and created to organize my
+            perspective projects and skillset in the future. Feel free to
+            explore the website with a cup of tea &#9749;
+          </p>
+        </div>
+        <div class="container">
+          <img id="my-face" src="./images/myFace.JPG" alt="my picture" />
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section id="about-me" class="my-5">
-      <div class="p-5 text-start bg-body-tertiary">
-        <div class="grid-container">
-          <div class="container">
-            <h1 class="text-body-emphasis">About me</h1>
-            <p class="lead">
-              I am a Computer Science BSc student with primary interest in web &
-              mobile application development. I am expected to complete my
-              Bachelor's degree from University of Debrecen in August 2024. This
-              website is my first portfolio and created to organize my
-              perspective projects and skillset in the future. Feel free to
-              explore the website with a cup of tea :)
-            </p>
-          </div>
-          <div class="container">
-            <img id="my-face" src="./images/myFace.JPG" alt="my picture" />
-          </div>
-        </div>
-      </div>
-    </section>
+  <section id="project">
+    <div class="container">
+      <div class="row">
 
-    <section id="projects">
-      <div class="project-container">
-        <h1 class="pb-5">Projects</h1>
-
-        <div class="container text-center">
-          <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-4 project-card">
-              <a href="#modal0">
-                <div class="card" style="width: 18rem">
-                  <img src="./images/dark.jpg" class="card-img-top" alt="..." />
-                  <div class="card-body">
-                    <h5 class="card-title">Personal Website</h5>
-                    <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 project-card">
-              <a href="#modal1">
-                <div class="card" style="width: 18rem">
-                  <img src="./images/dark.jpg" class="card-img-top" alt="..." />
-                  <div class="card-body">
-                    <h5 class="card-title">Sample 1</h5>
-                    <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 project-card">
-              <a href="#modal2">
-                <div class="card" style="width: 18rem">
-                  <img src="./images/dark.jpg" class="card-img-top" alt="..." />
-                  <div class="card-body">
-                    <h5 class="card-title">Sample 2</h5>
-                    <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-                  </div>
-                </div>
-              </a>
+        <!-- A flip card -->
+        <div class="col-sm-12 col-md-4 my-3">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img src="images/dark.jpg" alt="front">
+              </div>
+              <div class="flip-card-back">
+                <img src="images/orange.jpg" alt="back">
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
 
-    <!-- Modals (ckick card then pop up) -->
-    <!-- <div id="modal0">
-      <div
-        class="modal modal-sheet position-static d-block bg-body-secondary p-4 py-md-5"
-        tabindex="-1"
-        role="dialog"
-        id="modalSheet"
-      >
-        <div class="modal-dialog" role="document">
-          <div class="modal-content rounded-4 shadow">
-            <div class="modal-header border-bottom-0">
-              <h1 class="modal-title fs-5">Modal title</h1>
-              <button
-                type="button"
-                class="btn-close"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-              ></button>
-            </div>
-            <div class="modal-body py-0">
-              <p>
-                This is a modal sheet, a variation of the modal that docs itself
-                to the bottom of the viewport like the newer share sheets in
-                iOS.
-              </p>
-            </div>
-            <div
-              class="modal-footer flex-column align-items-stretch w-100 gap-2 pb-3 border-top-0"
-            >
-              <button type="button" class="btn btn-lg btn-primary">
-                Save changes
-              </button>
-              <button
-                type="button"
-                class="btn btn-lg btn-secondary"
-                data-bs-dismiss="modal"
-              >
-                Close
-              </button>
+        <!-- A flip card -->
+        <div class="col-sm-12 col-md-4 my-3">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img src="images/dark.jpg" alt="front">
+              </div>
+              <div class="flip-card-back">
+                <img src="images/orange.jpg" alt="back">
+              </div>
             </div>
           </div>
         </div>
+
+
       </div>
-    </div> -->
+  </section>
 
-    <section id="profile"></section>
+  <section id="footer">
+    <div class="container">
+      <footer
+              class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+        <div class="col-md-4 d-flex align-items-center">
+          <a title="auther" href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+            <svg class="bi" width="30" height="24">
+              <use xlink:href="#bootstrap"></use>
+            </svg>
+          </a>
+          <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Sota Noniwa</span>
+        </div>
 
-    <section id="footer">
-      <div class="container">
-        <footer
-          class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
-        >
-          <div class="col-md-4 d-flex align-items-center">
-            <a
-              href="/"
-              class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1"
-            >
-              <svg class="bi" width="30" height="24">
-                <use xlink:href="#bootstrap"></use>
-              </svg>
+        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+          <li class="ms-3">
+            <a class="text-body-secondary" href="mailto:surfersou@gmail.com?subject=Request from the website">
+              <img src="./images/envelope-at.svg" alt="envelope" height="30">
+              <use xlink:href="#mail"></use>
+              </img>
             </a>
-            <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Sota Noniwa</span>
-          </div>
+          </li>
+          <li class="ms-3">
+            <a class="text-body-secondary" href="https://github.com/SotaNoniwa">
+              <img src="./images/github.svg" alt="github" height="30">
+              <use xlink:href="#github"></use>
+            </a>
+          </li>
+        </ul>
+      </footer>
+    </div>
+  </section>
 
-          <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-            <li class="ms-3">
-              <a class="text-body-secondary" href="mailto:surfersou@gmail.com?subject=Request from the website">
-                <img src="./images/envelope-at.svg" alt="envelope" height="30">
-                  <use xlink:href="#mail"></use>
-                </img>
-              </a>
-            </li>
-            <li class="ms-3">
-              <a class="text-body-secondary" href="https://github.com/SotaNoniwa">
-                <img src="./images/github.svg" alt="github" height="30">
-                  <use xlink:href="#github"></use>
-              </a>
-            </li>
-          </ul>
-        </footer>
-      </div>
-    </section>
+  <script
+          src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+          crossorigin="anonymous"></script>
+</body>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-      crossorigin="anonymous"
-    ></script>
-  </body>
 </html>
