update flip cards

--- a/index.html
+++ b/index.html
@@ -49,38 +49,52 @@
 
   <section id="project">
     <div class="container">
-      <div class="row">
+      <div class="card-wrapper">
 
         <!-- A flip card -->
-        <div class="col-sm-12 col-md-4 my-3">
+        <div class="card-container">
           <div class="flip-card">
-            <div class="flip-card-inner">
-              <div class="flip-card-front">
-                <img src="images/dark.jpg" alt="front">
-              </div>
-              <div class="flip-card-back">
-                <img src="images/orange.jpg" alt="back">
-              </div>
+            <div class="front" id="portfolio"></div>
+            <div class="back">
+              <h3>Portfolio Website</h3>
+              <p>A straightforward personal website about me. Although there are only a few products currently, I'm in
+                the process of enhancing my creativity through experimentation and learning.</p>
+              <p>Technologies: HTML/CSS, Git Bash, GitHub</p>
             </div>
           </div>
         </div>
 
         <!-- A flip card -->
-        <div class="col-sm-12 col-md-4 my-3">
+        <div class="card-container">
           <div class="flip-card">
-            <div class="flip-card-inner">
-              <div class="flip-card-front">
-                <img src="images/dark.jpg" alt="front">
-              </div>
-              <div class="flip-card-back">
-                <img src="images/orange.jpg" alt="back">
-              </div>
+            <div class="front" id="to-do-list-app"></div>
+            <div class="back">
+              <h3>To Do List App</h3>
+              <p>This app was developed by following a JavaScript tutorial. It allows you to create a to-do list
+                categorized by title.
+                While I've gained an understanding of how EJS works, I personally find React to be more comfortable for
+                me.</p>
+              <p>https://todolist-for-you.cyclic.app/</p>
             </div>
           </div>
         </div>
 
+        <!-- A flip card -->
+        <div class="card-container">
+          <div class="flip-card">
+            <div class="front" id="keeper-app"></div>
+            <div class="back">
+              <h3>Notes Keeper App</h3>
+              <p>This is a MERN Stack application that enables you to create, delete, read, and edit notes. With this
+                app, you'll never forget what you need to do!</p>
+              <p>Technologies: MongoDB, Express, React, Node, HTML/CSS, Git Bash, GitHub, Render</p>
+              <p>https://notes-keeper-app.onrender.com/</p>
+            </div>
+          </div>
+        </div>
 
       </div>
+    </div>
   </section>
 
   <section id="footer">
