--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@
               <p>A straightforward personal website about me. Although there are only a few products currently, I'm in
                 the process of enhancing my creativity through experimentation and learning.</p>
               <p>Technologies: HTML/CSS, Git Bash, GitHub</p>
+              <ul class="nav col-md-4 justify-content-center list-unstyled d-flex">
+                <li class="ms-3">
+                  <a class="text-body-secondary" href="https://github.com/SotaNoniwa/sotanoniwa.github.io"
+                     target="_blank">
+                    <img src="./images/github.svg" alt="github" height="30">
+                    <use xlink:href="#github"></use>
+                    </img>
+                  </a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
@@ -74,7 +84,24 @@
                 categorized by title.
                 While I've gained an understanding of how EJS works, I personally find React to be more comfortable for
                 me.</p>
+              <p>Technologies: MongoDB, Express, JS, EJS, HTML/CSS, Git Bash, GitHub, Cyclic</p>
               <p>https://todolist-for-you.cyclic.app/</p>
+              <ul class="nav col-md-4 justify-content-center list-unstyled d-flex">
+                <li class="ms-3">
+                  <a class="text-body-secondary" href="https://github.com/SotaNoniwa/todolist"
+                     target="_blank">
+                    <img src="./images/github.svg" alt="github" height="30">
+                    <use xlink:href="#github"></use>
+                    </img>
+                  </a>
+                </li>
+                <li class="ms-3">
+                  <a class="text-body-secondary" href="https://todolist-for-you.cyclic.app" target="_blank">
+                    <img src="./images/window.svg" alt="window" height="30">
+                    <use xlink:href="#window"></use>
+                  </a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
@@ -87,8 +114,24 @@
               <h3>Notes Keeper App</h3>
               <p>This is a MERN Stack application that enables you to create, delete, read, and edit notes. With this
                 app, you'll never forget what you need to do!</p>
-              <p>Technologies: MongoDB, Express, React, Node, HTML/CSS, Git Bash, GitHub, Render</p>
+              <p>Technologies: MongoDB, Express, React, Node, JS, HTML/CSS, Git Bash, GitHub, Render</p>
               <p>https://notes-keeper-app.onrender.com/</p>
+              <ul class="nav col-md-4 justify-content-center list-unstyled d-flex">
+                <li class="ms-3">
+                  <a class="text-body-secondary" href="https://github.com/SotaNoniwa/notes-keeper-app"
+                     target="_blank">
+                    <img src="./images/github.svg" alt="github" height="30">
+                    <use xlink:href="#github"></use>
+                    </img>
+                  </a>
+                </li>
+                <li class="ms-3">
+                  <a class="text-body-secondary" href="https://notes-keeper-app.onrender.com" target="_blank">
+                    <img src="./images/window.svg" alt="window" height="30">
+                    <use xlink:href="#window"></use>
+                  </a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
@@ -119,7 +162,7 @@
             </a>
           </li>
           <li class="ms-3">
-            <a class="text-body-secondary" href="https://github.com/SotaNoniwa">
+            <a class="text-body-secondary" href="https://github.com/SotaNoniwa" target="_blank">
               <img src="./images/github.svg" alt="github" height="30">
               <use xlink:href="#github"></use>
             </a>
