--- a/index.html
+++ b/index.html
@@ -139,9 +139,111 @@
     </div>
   </section>
 
+  <section id="profile">
+    <div class="bg-body-tertiary p-5">
+      <div>
+        <h1 class="text-body-emphasis">Profile</h1>
+      </div>
+      <ul class="timeline">
+        <li>
+          <div class="timeline-img">
+            <img class="round-img" src="images/kyoto.jpg" alt="Kyoto">
+          </div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <h4>1998</h4>
+              <h4>Birth in Kyoto</h4>
+            </div>
+            <div class="timeline-body">
+              <p class="text-muted">My future dream was becoming a Ninja. &#129399;</p>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="timeline-img">
+            <img class="round-img" src="images/surfing.jpg" alt="Surfing">
+          </div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <h4>2011~2014</h4>
+              <h4>Middle school</h4>
+            </div>
+            <div class="timeline-body">
+              <p class="text-muted">My father loves surfing and I got interested it too. I have enjoyed it even now!</p>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="timeline-img">
+            <img class="round-img" src="images/tennis.jpg" alt="Tennis">
+          </div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <h4>2014~2017</h4>
+              <h4>High school</h4>
+            </div>
+            <div class="timeline-body">
+              <p class="text-muted">I belonged to tennis club. It was nice experience to cooporate with my pair and team
+                mates.</p>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="timeline-img">
+            <img class="round-img" src="images/dear.jpg" alt="Dear">
+          </div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <h4>2017~2021</h4>
+              <h4>Rakuno University</h4>
+            </div>
+            <div class="timeline-body">
+              <p class="text-muted">I got into the University to learn about wildlife and nature since I love animals
+                and wanted to preserve nature. When I was in 3rd year, I went to Malaysia as a exchange student, and I
+                realize the importance of English. I started learning English, and begin considering about study abroad.
+              </p>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="timeline-img">
+            <img class="round-img" src="images/coding.jpg" alt="Coding">
+          </div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <h4>2021~2024</h4>
+              <h4>University of Debrecen</h4>
+            </div>
+            <div class="timeline-body">
+              <p class="text-muted">I decided to change my major because job oppotunities for IT industory is huge and
+                it can relate to even nature science which is my prior major.
+              </p>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="timeline-img">
+            <img class="round-img" src="images/future.jpg" alt="Future">
+          </div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <h4>2024~</h4>
+              <h4>My future</h4>
+            </div>
+            <div class="timeline-body">
+              <p class="text-muted">My primary goal is to specialize in web and software development. I plan to achieve
+                this by continuously advancing my
+                skills through both on-the-job learning and self-study.
+              </p>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </section>
+
   <section id="footer">
-    <footer
-            class="d-flex flex-wrap justify-content-between align-items-center p-4 bg-body-tertiary">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center p-4 bg-body-tertiary">
       <div class="col-md-4 d-flex align-items-center">
         <a title="auther" href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
           <svg class="bi" width="30" height="24">
