--- a/index.html
+++ b/index.html
@@ -15,14 +15,9 @@
 
 <body>
   <section id="top-banner">
-    <div class="container">
-      <div class="bg"></div>
-      <div class="bg bg2"></div>
-      <div class="bg bg3"></div>
-      <div class="content">
-        <h1>Portfolio</h1>
-        <p>Sota Noniwa</p>
-      </div>
+    <div class="content">
+      <h1>Sota Noniwa</h1>
+      <p>An University student interested in web development</p>
     </div>
   </section>
 
@@ -242,6 +237,16 @@
     </div>
   </section>
 
+  <section id="contact">
+    <div class="container">
+      <h3>Contact me</h3>
+      <input type="text" id="name" placeholder="Your Name" required>
+      <input type="text" id="email" placeholder="Email" required>
+      <textarea type="text" id="message" rows="4" placeholder="Ask your question here."></textarea>
+      <button onclick="sendMail();">Send</button>
+    </div>
+  </section>
+
   <section id="footer">
     <footer class="d-flex flex-wrap justify-content-between align-items-center p-4 bg-body-tertiary">
       <div class="col-md-4 d-flex align-items-center">
@@ -275,6 +280,12 @@
           src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
           integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
           crossorigin="anonymous"></script>
+
+  <script type="text/javascript"
+          src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+          </script>
+
+  <script type="text/javascript" src="mail.js"></script>
 </body>
 
 </html>
