create skill section with devicon

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
         crossorigin="anonymous" />
   <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 </head>
 
 <body>
@@ -21,23 +22,21 @@
     </div>
   </section>
 
-  <section id="about-me">
-    <div class="p-5 bg-body-tertiary">
-      <div class="grid-container">
-        <div>
-          <h1 class="text-body-emphasis">About me</h1>
-          <p class="lead">
-            I am a Computer Science BSc student with primary interest in web &
-            mobile application development. I am expected to complete my
-            Bachelor's degree from University of Debrecen in August 2024. This
-            website is my first portfolio and created to organize my
-            perspective projects and skillset in the future. Feel free to
-            explore the website with a cup of tea &#9749;
-          </p>
-        </div>
-        <div>
-          <img id="my-face" src="./images/myFace.JPG" alt="my picture" />
-        </div>
+  <section id="about-me" class="p-4">
+    <h1 class="text-body-emphasis">About me</h1>
+    <div class="grid-container">
+      <div>
+        <p class="lead">
+          I am a Computer Science BSc student with primary interest in web &
+          mobile application development. I am expected to complete my
+          Bachelor's degree from University of Debrecen in August 2024. This
+          website is my first portfolio and created to organize my
+          perspective projects and skillset in the future. Feel free to
+          explore the website with a cup of tea &#9749;
+        </p>
+      </div>
+      <div>
+        <img id="my-face" src="./images/myFace.JPG" alt="my picture" />
       </div>
     </div>
   </section>
@@ -129,8 +128,23 @@
           </div>
         </div>
       </div>
-
     </div>
+    </div>
+  </section>
+
+  <section id="skill">
+    <h1>Skill</h1>
+    <p>These are my skill sets that I've learnt and used to create projects</p>
+    <div class="icon-container">
+      <i class="devicon-git-plain-wordmark colored"></i>
+      <i class="devicon-github-original-wordmark colored"></i>
+      <i class="devicon-mongodb-plain-wordmark colored"></i>
+      <i class="devicon-express-original-wordmark colored"></i>
+      <i class="devicon-react-original-wordmark colored"></i>
+      <i class="devicon-nodejs-plain-wordmark colored"></i>
+      <i class="devicon-html5-plain-wordmark colored"></i>
+      <i class="devicon-css3-plain-wordmark colored"></i>
+      <i class="devicon-javascript-plain colored"></i>
     </div>
   </section>
 
@@ -259,13 +273,13 @@
       </div>
 
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3">
+        <!-- <li class="ms-3">
           <a class="text-body-secondary" href="mailto:surfersou@gmail.com?subject=Request from the website">
             <img src="./images/envelope-at.svg" alt="envelope" height="30">
             <use xlink:href="#mail"></use>
             </img>
           </a>
-        </li>
+        </li> -->
         <li class="ms-3">
           <a class="text-body-secondary" href="https://github.com/SotaNoniwa" target="_blank" rel="noopener">
             <img src="./images/github.svg" alt="github" height="30">
