update appearance and modify media query

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     </div>
   </section>
 
-  <section id="about-me" class="p-4">
-    <h1 class="text-body-emphasis">About me</h1>
+  <section id="about-me">
+    <h2>About me</h2>
     <div class="grid-container">
       <div>
         <p class="lead">
@@ -41,8 +41,8 @@
     </div>
   </section>
 
-  <section id="project" class="p-5">
-    <h1 class="text-body-emphasis">Projects</h1>
+  <section id="project" class="p-4 bg-body-tertiary">
+    <h2>Projects</h2>
     <div class="card-wrapper">
       <!-- A flip card -->
       <div class="card-container">
@@ -54,7 +54,7 @@
               the process of enhancing my creativity through experimentation and learning.</p>
             <p>Technologies: HTML/CSS, Git Bash, GitHub</p>
             <ul class="nav col-md-4 justify-content-center list-unstyled d-flex">
-              <li class="ms-3">
+              <li>
                 <a class="text-body-secondary" href="https://github.com/SotaNoniwa/sotanoniwa.github.io"
                    target="_blank" rel="noopener">
                   <img src="./images/github.svg" alt="github" height="30">
@@ -79,16 +79,16 @@
               me.</p>
             <p>Technologies: MongoDB, Express, JS, EJS, HTML/CSS, Git Bash, GitHub, Cyclic</p>
             <ul class="nav col-md-4 justify-content-center list-unstyled d-flex">
-              <li class="ms-3">
-                <a class="text-body-secondary" href="https://github.com/SotaNoniwa/todolist"
+              <li>
+                <a href="https://github.com/SotaNoniwa/todolist"
                    target="_blank" rel="noopener">
                   <img src="./images/github.svg" alt="github" height="30">
                   <use xlink:href="#github"></use>
                   </img>
                 </a>
               </li>
-              <li class="ms-3">
-                <a class="text-body-secondary" href="https://todolist-for-you.cyclic.app" target="_blank"
+              <li>
+                <a href="https://todolist-for-you.cyclic.app" target="_blank"
                    rel="noopener">
                   <img src="./images/window.svg" alt="window" height="30">
                   <use xlink:href="#window"></use>
@@ -109,16 +109,16 @@
               app, you'll never forget what you need to do!</p>
             <p>Technologies: MongoDB, Express, React, Node, JS, HTML/CSS, Git Bash, GitHub, Render</p>
             <ul class="nav col-md-4 justify-content-center list-unstyled d-flex">
-              <li class="ms-3">
-                <a class="text-body-secondary" href="https://github.com/SotaNoniwa/notes-keeper-app"
+              <li>
+                <a href="https://github.com/SotaNoniwa/notes-keeper-app"
                    target="_blank" rel="noopener">
                   <img src="./images/github.svg" alt="github" height="30">
                   <use xlink:href="#github"></use>
                   </img>
                 </a>
               </li>
-              <li class="ms-3">
-                <a class="text-body-secondary" href="https://notes-keeper-app.onrender.com" target="_blank"
+              <li>
+                <a href="https://notes-keeper-app.onrender.com" target="_blank"
                    rel="noopener">
                   <img src="./images/window.svg" alt="window" height="30">
                   <use xlink:href="#window"></use>
@@ -132,8 +132,8 @@
     </div>
   </section>
 
-  <section id="skill">
-    <h1>Skill</h1>
+  <section id="skill" class="p-5">
+    <h2>Skill</h2>
     <p>These are my skill sets that I've learnt and used to create projects</p>
     <div class="icon-container">
       <i class="devicon-git-plain-wordmark colored"></i>
@@ -148,107 +148,99 @@
     </div>
   </section>
 
-  <section id="profile">
-    <div class="bg-body-tertiary p-5">
-      <div>
-        <h1 class="text-body-emphasis">Profile</h1>
-      </div>
-      <ul class="timeline">
-        <li>
-          <div class="timeline-img">
-            <img class="round-img" src="images/kyoto.jpg" alt="Kyoto">
-          </div>
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h4>1998</h4>
-              <h4>Birth in Kyoto</h4>
-            </div>
-            <div class="timeline-body">
-              <p class="text-muted">My future dream was becoming a Ninja. &#129399;</p>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="timeline-img">
-            <img class="round-img" src="images/surfing.jpg" alt="Surfing">
-          </div>
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h4>2011~2014</h4>
-              <h4>Middle school</h4>
-            </div>
-            <div class="timeline-body">
-              <p class="text-muted">My father loves surfing and I got interested it too. I have enjoyed it even now!</p>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="timeline-img">
-            <img class="round-img" src="images/tennis.jpg" alt="Tennis">
-          </div>
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h4>2014~2017</h4>
-              <h4>High school</h4>
-            </div>
-            <div class="timeline-body">
-              <p class="text-muted">I belonged to tennis club. It was nice experience to cooporate with my pair and team
-                mates.</p>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="timeline-img">
-            <img class="round-img" src="images/dear.jpg" alt="Dear">
-          </div>
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h4>2017~2021</h4>
-              <h4>Rakuno University</h4>
-            </div>
-            <div class="timeline-body">
-              <p class="text-muted">I got into the University to learn about wildlife and nature since I love animals
-                and wanted to preserve nature. When I was in 3rd year, I went to Malaysia as a exchange student, and I
-                realize the importance of English. I started learning English, and begin considering about study abroad.
-              </p>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="timeline-img">
-            <img class="round-img" src="images/coding.jpg" alt="Coding">
-          </div>
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h4>2021~2024</h4>
-              <h4>University of Debrecen</h4>
-            </div>
-            <div class="timeline-body">
-              <p class="text-muted">I decided to change my major because job oppotunities for IT industory is huge and
-                it can relate to even nature science which is my prior major.
-              </p>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="timeline-img">
-            <img class="round-img" src="images/future.jpg" alt="Future">
-          </div>
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h4>2024~</h4>
-              <h4>My future</h4>
-            </div>
-            <div class="timeline-body">
-              <p class="text-muted">My primary goal is to specialize in web and software development. I plan to achieve
-                this by continuously advancing my
-                skills through both on-the-job learning and self-study.
-              </p>
-            </div>
-          </div>
-        </li>
-      </ul>
+  <section id="profile" class="bg-body-tertiary">
+    <div>
+      <h2>Profile</h2>
     </div>
+    <ul class="timeline">
+      <li>
+        <div class="timeline-img">
+          <img class="round-img" src="images/kyoto.jpg" alt="Kyoto">
+        </div>
+        <div class="timeline-panel">
+          <div class="timeline-heading">
+            <h4>1998<br>Birth in Kyoto</h4>
+          </div>
+          <div class="timeline-body">
+            <p class="text-muted">My future dream was becoming a Ninja. &#129399;</p>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="timeline-img">
+          <img class="round-img" src="images/surfing.jpg" alt="Surfing">
+        </div>
+        <div class="timeline-panel">
+          <div class="timeline-heading">
+            <h4>2011~2014<br>Middle school</h4>
+          </div>
+          <div class="timeline-body">
+            <p class="text-muted">My father loves surfing and I got interested it too. I have enjoyed it even now!</p>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="timeline-img">
+          <img class="round-img" src="images/tennis.jpg" alt="Tennis">
+        </div>
+        <div class="timeline-panel">
+          <div class="timeline-heading">
+            <h4>2014~2017<br>High school</h4>
+          </div>
+          <div class="timeline-body">
+            <p class="text-muted">I belonged to tennis club. It was nice experience to cooporate with my pair and team
+              mates.</p>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="timeline-img">
+          <img class="round-img" src="images/dear.jpg" alt="Dear">
+        </div>
+        <div class="timeline-panel">
+          <div class="timeline-heading">
+            <h4>2017~2021<br>Rakuno University</h4>
+          </div>
+          <div class="timeline-body">
+            <p class="text-muted">I got into the University to learn about wildlife and nature since I love animals
+              and wanted to preserve nature. When I was in 3rd year, I went to Malaysia as a exchange student, and I
+              realize the importance of English. I started learning English, and begin considering about study abroad.
+            </p>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="timeline-img">
+          <img class="round-img" src="images/coding.jpg" alt="Coding">
+        </div>
+        <div class="timeline-panel">
+          <div class="timeline-heading">
+            <h4>2021~2024<br>University of Debrecen</h4>
+          </div>
+          <div class="timeline-body">
+            <p class="text-muted">I decided to change my major because job oppotunities for IT industory is huge and
+              it can relate to even nature science which is my prior major.
+            </p>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="timeline-img">
+          <img class="round-img" src="images/future.jpg" alt="Future">
+        </div>
+        <div class="timeline-panel">
+          <div class="timeline-heading">
+            <h4>2024~<br>My future</h4>
+          </div>
+          <div class="timeline-body">
+            <p class="text-muted">My primary goal is to specialize in web and software development. I plan to achieve
+              this by continuously advancing my
+              skills through both on-the-job learning and self-study.
+            </p>
+          </div>
+        </div>
+      </li>
+    </ul>
   </section>
 
   <section id="contact">
@@ -262,7 +254,7 @@
   </section>
 
   <section id="footer">
-    <footer class="d-flex flex-wrap justify-content-between align-items-center p-4 bg-body-tertiary">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center p-4">
       <div class="col-md-4 d-flex align-items-center">
         <a title="auther" href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
           <svg class="bi" width="30" height="24">
@@ -280,7 +272,7 @@
             </img>
           </a>
         </li> -->
-        <li class="ms-3">
+        <li class="mx-2">
           <a class="text-body-secondary" href="https://github.com/SotaNoniwa" target="_blank" rel="noopener">
             <img src="./images/github.svg" alt="github" height="30">
             <use xlink:href="#github"></use>
