--- a/index.html
+++ b/index.html
@@ -15,6 +15,26 @@
 </head>
 
 <body>
+  <nav class="navbar navbar-expand-lg fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Menu</a> <!--you can replace this to your own Logo-->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+              aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link" href="#about-me">About</a>
+          <a class="nav-link" href="#project">Project</a>
+          <a class="nav-link" href="#skill">Skill</a>
+          <a class="nav-link" href="#profile">Profile</a>
+          <a class="nav-link" href="#contact">Contact</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+
   <section id="top-banner">
     <div class="content">
       <h1>Sota Noniwa</h1>
