add a new project - melapp

--- a/index.html
+++ b/index.html
@@ -147,10 +147,42 @@
           </div>
         </div>
       </div>
+
+      <!-- A flip card -->
+      <div class="card-container">
+        <div class="flip-card">
+          <div class="front" id="melapp"></div>
+          <div class="back">
+            <h3>Image Classification App (In Progress...)</h3>
+            <p>The project developed with <a href="https://www.linkedin.com/in/tuguldur-gerelmaa-442373274/">Tuguldur
+                Gerelmaa</a>
+              . You can upload an image and receive the prediction of the image.</p>
+            <p>Technologies: Python3, Flask, JS, React, HTML/CSS, Git Bash, GitHub, Heroku</p>
+            <ul class="nav col-md-4 justify-content-center list-unstyled d-flex">
+              <li>
+                <a href="https://github.com/8Nero/melapp-frontend"
+                   target="_blank" rel="noopener">
+                  <img src="./images/github.svg" alt="github" height="30">
+                  <use xlink:href="#github"></use>
+                  </img>
+                </a>
+              </li>
+              <li>
+                <a href="https://melapp-frontend-cb8eab4e1e35.herokuapp.com/" target="_blank"
+                   rel="noopener">
+                  <img src="./images/window.svg" alt="window" height="30">
+                  <use xlink:href="#window"></use>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
     </div>
   </section>
 
+  <!-- https://melapp-frontend-cb8eab4e1e35.herokuapp.com/ -->
   <section id="skill" class="p-5">
     <h2>Skill</h2>
     <p>These are my skill sets that I've learnt and used to create projects</p>
@@ -161,6 +193,7 @@
       <i class="devicon-express-original-wordmark colored"></i>
       <i class="devicon-react-original-wordmark colored"></i>
       <i class="devicon-nodejs-plain-wordmark colored"></i>
+      <i class="devicon-python-plain-wordmark"></i>
       <i class="devicon-html5-plain-wordmark colored"></i>
       <i class="devicon-css3-plain-wordmark colored"></i>
       <i class="devicon-javascript-plain colored"></i>
@@ -207,8 +240,8 @@
             <h4>2014~2017<br>High school</h4>
           </div>
           <div class="timeline-body">
-            <p class="text-muted">I belonged to tennis club. It was nice experience to cooporate with my pair and team
-              mates.</p>
+            <p class="text-muted">I was a member of a tennis club, and it was a great experience collaborating with my
+              doubles partner and teammates.</p>
           </div>
         </div>
       </li>
@@ -223,7 +256,8 @@
           <div class="timeline-body">
             <p class="text-muted">I got into the University to learn about wildlife and nature since I love animals
               and wanted to preserve nature. When I was in 3rd year, I went to Malaysia as a exchange student, and I
-              realize the importance of English. I started learning English, and begin considering about study abroad.
+              realize the importance of English. This experience inspired me to learn English, and start considering
+              about study abroad.
             </p>
           </div>
         </div>
@@ -238,7 +272,7 @@
           </div>
           <div class="timeline-body">
             <p class="text-muted">I decided to change my major because job oppotunities for IT industory is huge and
-              it can relate to even nature science which is my prior major.
+              IT career is quite interesting for me.
             </p>
           </div>
         </div>
@@ -253,8 +287,7 @@
           </div>
           <div class="timeline-body">
             <p class="text-muted">My primary goal is to specialize in web and software development. I plan to achieve
-              this by continuously advancing my
-              skills through both on-the-job learning and self-study.
+              this by continuously advancing my skills through both on-the-job learning and self-study.
             </p>
           </div>
         </div>
