--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
           <a class="nav-link" href="#skill">Skill</a>
           <a class="nav-link" href="#profile">Profile</a>
           <a class="nav-link" href="#contact">Contact</a>
+          <a class="nav-link" href="images/resume.pdf" download>
+            Download my Resume
+            <img src="./images/file-earmark-person-fill.svg" alt="resume">
+          </a>
         </div>
       </div>
     </div>
@@ -153,10 +157,13 @@
         <div class="flip-card">
           <div class="front" id="melapp"></div>
           <div class="back">
-            <h3>Image Classification App (In Progress...)</h3>
+            <h3>Image Classification App<br>(Under development...)</h3>
             <p>The project developed with <a href="https://www.linkedin.com/in/tuguldur-gerelmaa-442373274/">Tuguldur
                 Gerelmaa</a>
-              . You can upload an image and receive the prediction of the image.</p>
+              . Our platform allows you to upload an image for analysis, providing you with predictions. Our
+              primary objective is to detect melanoma, a potentially life-threatening skin condition, at its earliest
+              stages, ensuring
+              that individuals can recognize the warning signs and seek prompt attention.</p>
             <p>Technologies: Python3, Flask, JS, React, HTML/CSS, Git Bash, GitHub, Heroku</p>
             <ul class="nav col-md-4 justify-content-center list-unstyled d-flex">
               <li>
@@ -186,16 +193,23 @@
     <h2>Skill</h2>
     <p>These are my skill sets that I've learnt and used to create projects</p>
     <div class="icon-container">
-      <i class="devicon-git-plain-wordmark colored"></i>
-      <i class="devicon-github-original-wordmark colored"></i>
+      <i class="devicon-javascript-plain colored"></i>
+      <i class="devicon-java-plain-wordmark colored"></i>
+      <i class="devicon-python-plain-wordmark"></i>
+      <i class="devicon-c-plain colored"></i>
+      <i class="devicon-cplusplus-plain colored"></i>
+      <i class="devicon-csharp-plain colored"></i>
+      <i class="devicon-unity-original-wordmark colored"></i>
       <i class="devicon-mongodb-plain-wordmark colored"></i>
       <i class="devicon-express-original-wordmark colored"></i>
       <i class="devicon-react-original-wordmark colored"></i>
       <i class="devicon-nodejs-plain-wordmark colored"></i>
-      <i class="devicon-python-plain-wordmark"></i>
       <i class="devicon-html5-plain-wordmark colored"></i>
       <i class="devicon-css3-plain-wordmark colored"></i>
-      <i class="devicon-javascript-plain colored"></i>
+      <i class="devicon-php-plain colored"></i>
+      <i class="devicon-git-plain-wordmark colored"></i>
+      <i class="devicon-github-original-wordmark colored"></i>
+
     </div>
   </section>
 
@@ -316,14 +330,21 @@
       </div>
 
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <!-- <li class="ms-3">
-          <a class="text-body-secondary" href="mailto:surfersou@gmail.com?subject=Request from the website">
-            <img src="./images/envelope-at.svg" alt="envelope" height="30">
-            <use xlink:href="#mail"></use>
+        <li class="mx-3">
+          <a class="text-body-secondary" href="images/resume.pdf" download>
+            <img src="./images/file-earmark-person-fill.svg" alt="cv" height="30">
+            <use xlink:href="#resume"></use>
+          </a>
+        </li>
+        <li class="mx-3">
+          <a class="text-body-secondary" href="https://www.linkedin.com/in/sota-noniwa-a0602a240/" target="_blank"
+             rel="noopener">
+            <img src="./images/linkedin.svg" alt="linkedin" height="30">
+            <use xlink:href="#linkedin"></use>
             </img>
           </a>
-        </li> -->
-        <li class="mx-2">
+        </li>
+        <li class="mx-3">
           <a class="text-body-secondary" href="https://github.com/SotaNoniwa" target="_blank" rel="noopener">
             <img src="./images/github.svg" alt="github" height="30">
             <use xlink:href="#github"></use>
